# sub2api-token

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
